# Huamani_Bonifacio_Marco_pc3

./: .gitignore  CMakeLists.txt  README.md
Actividades/Actividad4-CC232/: Actividad4-CC232.md
Actividades/Actividad5-CC232/: Actividad5-CC232.md
Actividades/Actividad6-CC232/: Actividad6-CC232.md
benchmark/: benchmark.cpp  benchmark_treap.cpp
demos/: demo_orderset.cpp
docs/: autocommit.md  bitacora.md  respuestas_obligatorias.md
include/: treap.h
resultados/: benchmark.txt  casos_borde.txt  casos_borde_especificos.txt  ejecucion_pc3.txt  tests_pc3.txt
src/: main.cpp  treap.cpp
tests/: test_brute_force.cpp  test_casos_borde.cpp  test_treap.cpp
video/: video.txt
